# LWAC

./: .dockerignore  .env.example  .gitignore  README.md  agent.md  docker-compose.yaml  render.yaml
backend/: Dockerfile  alembic.ini  build.sh  create_lesson.py  database.py  exceptions.py  lwac.db  main.py  pyproject.toml  requirements.txt  seed_data.py  test_quiz.py  update_q2.py  vps_nginx.txt  vps_nginx_error.txt  vps_test.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f4f0de7b91f_add_vocabulary_entries.py  644db7dbcce9_initial_schema.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  chat.py  coach.py  daily_quiz.py  lessons.py  quiz.py  results.py  rewards.py  upload.py  vocab.py
backend/app/services/: chat.py  email.py  grading.py
backend/apps/chat/: api.py  router.py  (+1 more)
backend/core/: config.py  queries.py  query_builder.py  security.py
backend/data/: master_vocabulary.py  vocabulary_entries.json
backend/models/: __init__.py  chat.py  coach.py  engagement.py  learning.py  result.py  reward.py  user.py  vocab.py  vocabulary.py
backend/nginx/: nginx.conf
backend/repositories/: __init__.py  assignment_repo.py  base.py  lesson_repo.py  question_repo.py  result_repo.py  reward_repo.py  user_repo.py
backend/scripts/: seed.py
backend/services/: chat.py  email.py  grading.py
backend/tests/: conftest.py  test_chat.py  test_coach.py  test_config.py  test_dailyquiz.py  test_email_templates.py  test_lesson.py  test_quiz.py  test_result.py  test_reward.py  test_upload.py  test_user.py  test_vocab.py
(+75 files in other folders)
