[project]
name = "backend"
version = "0.1.0"
description = "Backend service"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",

    "sqlalchemy==2.0.49",
    "alembic==1.18.4",

    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",

    "psycopg2-binary==2.9.11",
    "asyncpg==0.31.0",

    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",

    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.24",

    "google-genai>=1.70.0,<2.0.0",
    "httpx==0.28.1",
    "tenacity==9.1.4",

    "python-dotenv==1.2.2",

    "edge-tts==7.2.8",
    "ruff==0.15.9"
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
